--- a/src/pruebaud1/gui/ventanas/VentanaPrincipal.form
+++ b/src/pruebaud1/gui/ventanas/VentanaPrincipal.form
@@ -187,12 +187,7 @@
                         <Component class="javax.swing.JTable" name="tblTrabajos">
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                              <Table columnCount="4" rowCount="4">
-                                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                                <Column editable="true" title="Title 4" type="java.lang.Object"/>
-                              </Table>
+                              <Table columnCount="0" rowCount="0"/>
                             </Property>
                           </Properties>
                         </Component>
@@ -495,12 +490,7 @@
                             <Component class="javax.swing.JTable" name="tblEmpleadosDeTrabajo">
                               <Properties>
                                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                                  <Table columnCount="4" rowCount="4">
-                                    <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                                    <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                                    <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                                    <Column editable="true" title="Title 4" type="java.lang.Object"/>
-                                  </Table>
+                                  <Table columnCount="0" rowCount="0"/>
                                 </Property>
                               </Properties>
                             </Component>
@@ -628,12 +618,7 @@
                         <Component class="javax.swing.JTable" name="tblTodosEmpleados">
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                              <Table columnCount="4" rowCount="4">
-                                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                                <Column editable="true" title="Title 4" type="java.lang.Object"/>
-                              </Table>
+                              <Table columnCount="0" rowCount="0"/>
                             </Property>
                           </Properties>
                         </Component>
@@ -968,7 +953,6 @@
                 <Component class="javax.swing.JButton" name="btnOperacionesActDes">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Operaciones: Activar"/>
-                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnOperacionesActDesActionPerformed"/>
@@ -999,16 +983,14 @@
                               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="btnAsignarEmpleado" pref="169" max="32767" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Group type="102" attributes="0">
-                                          <Component id="lbOperacionesNtrabajo" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="inputNTrabajoEmpleado" max="32767" attributes="0"/>
-                                      </Group>
-                                      <Component id="btnEliminarEmpleado" pref="169" max="32767" attributes="0"/>
-                                      <Component id="btnGuardarEmpleado" pref="169" max="32767" attributes="0"/>
-                                      <Component id="btnGuardarCambios" pref="169" max="32767" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="lbOperacionesNtrabajo" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="inputNTrabajoEmpleado" max="32767" attributes="0"/>
                                   </Group>
+                                  <Component id="btnEliminarEmpleado" pref="169" max="32767" attributes="0"/>
+                                  <Component id="btnGuardarEmpleado" pref="169" max="32767" attributes="0"/>
+                                  <Component id="btnGuardarCambios" pref="169" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace pref="18" max="32767" attributes="0"/>
                           </Group>
