--- a/src/pruebaud1/gui/ventanas/VentanaPrincipal.form
+++ b/src/pruebaud1/gui/ventanas/VentanaPrincipal.form
@@ -283,7 +283,7 @@
                               <Component id="lbAgregarTrabajo" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                               <Component id="panelAccionAgregarTrabajoInterno" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="120" max="32767" attributes="0"/>
+                              <EmptySpace pref="135" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -349,9 +349,9 @@
                                       <Component id="lbNombreTrabajoNuevo" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="inputNombreTrabajo" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="btnGuardarTrabajoNuevo" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace pref="53" max="32767" attributes="0"/>
+                                  <EmptySpace pref="32" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -601,7 +601,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" max="-2" attributes="0"/>
-                              <Component id="tblEmpleadosScroll" pref="221" max="32767" attributes="0"/>
+                              <Component id="tblEmpleadosScroll" pref="227" max="32767" attributes="0"/>
                               <EmptySpace min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
